--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-qr-code": "^2.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-textarea-autosize": "^8.3.3",
     "recoil": "^0.4.1",
     "regenerator-runtime": "^0.13.9",
+    "swiper": "^6.8.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
