--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "core-js": "^3.17.3",
+    "cors": "^2.8.5",
     "node-sass": "^6.0.1",
     "prettier-eslint": "^13.0.0",
     "react": "^17.0.2",
